--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -18,6 +18,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     line-height: 1;
+    background-color: #94F7FF ;
   }
   
   textarea{
