--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,90 +1,78 @@
-/* .hours{
-    display: flex;
-    height: 50px;
-    background-color: #FFC49E;
-    border-radius: 5px;
-    border-style: solid;
-    border-width: 2px;
-    border-color: #8D9BEB;
-    margin: 20px;
-    font-size: 20px;
-    padding: 7px;
-}
-.glyphicon{
-    color: blue;
-} */
-
 body {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-    line-height: 1;
-    background-color: #F2D3AC ;
-  }
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  line-height: 1;
+  background-color: #F2D3AC ;
+}
+
+textarea{
+  background: transparent;
+  border: none;
+  resize: none;
+  color: #000000;
+  border: 1px solid black;
+  padding: 10px;
+}
+
+.jumbotron {
+  text-align: center;
+  background-color: transparent;
+  color: black;
+  border-radius: 0;
+  border-bottom: 10px solid black;
+}
+
+.description{
+  white-space: pre-wrap;
+}
+
+.time-block{
+  text-align: center;
+  border-radius: 15px;
+}
+
+.row {
+  white-space: pre-wrap;
+  height: 80px;
+  border: 1px solid black;
+  margin: 5px;
   
-  textarea{
-    background: transparent;
-    border: none;
-    resize: none;
-    color: #000000;
-    border-left: 1px solid black;
-    padding: 10px;
-  }
-  
-  .jumbotron {
-    text-align: center;
-    background-color: transparent;
-    color: black;
-    border-radius: 0;
-    border-bottom: 10px solid black;
-  }
-  
-  .description{
-    white-space: pre-wrap;
-  }
-  
-  .time-block{
-    text-align: center;
-    border-radius: 15px;
-  }
-  
-  .timeRow {
-    white-space: pre-wrap;
-    height: 80px;
-    border-top: 1px solid white;;
-  }
-  
-  .hour {
-    background-color: #ffffff;
-    color: #000000;
-    border-top: 1px dashed #000000;
-  }
-  
-  .past {
-    background-color: #146973;
-    color: white;
-  }
-  
-  .present {
-    background-color: #D93232;
-    color: white;
-  }
-  
-  .future {
-    background-color: #54BFB5;
-    color: white;
-  }
-  
-  .saveBtn {
-    height: 80px;
-    width: 80px;
-    border: 1px solid black;
-    border-radius: 15px;
-    background-color: #D96B2B;
-    color: white;
-  }
-  
-  .saveBtn i:hover {
-    font-size: 20px;
-    transition: all .3s ease-in-out;
-  }
-  
+}
+
+.hour {
+  background-color: #F2AC29;
+  color: #000000;
+  border: 1px solid #000000;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+}
+
+.past {
+  background-color: #146973;
+  color: white;
+}
+
+.present {
+  background-color: #D93232;
+  color: white;
+}
+
+.future {
+  background-color: #54BFB5;
+  color: white;
+}
+
+.saveBtn {
+  border: 1px solid black;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  background-color: #D96B2B;
+  color: #54BFB5;
+}
+
+.saveBtn i:hover {
+  font-size: 20px;
+  transition: all .3s ease-in-out;
+}
